--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,10 @@
 				</configuration>
 			</plugin>
 
+			<!--
+			Evita excepciones al Deployar la aplicación en Azure.
+			Cuando intenta realizar pruebas de Test ignora las expcepciones
+			-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
